feat(gb28181): support certificate register authentication
